@@ -2,6 +2,15 @@
 
         Reviewed by Eric Seidel.
 
+        Implement TextBoundaries for WINCE port.
+        https://bugs.webkit.org/show_bug.cgi?id=27371
+
+        * platform/text/wince/TextBoundariesWince.cpp: Added.
+
+2009-11-18  Yong Li  <yong.li@torchmobile.com>
+
+        Reviewed by Eric Seidel.
+
         Implement TextBreakIterator for WINCE port.
         https://bugs.webkit.org/show_bug.cgi?id=27371
 
